--- a/src/translations/am/common.json
+++ b/src/translations/am/common.json
@@ -11,15 +11,22 @@
       "description": "Բարձրացրեք ձեր բիզնեսը. Փոխակերպեք ձեր բիզնեսը խելացի QR տեխնոլոգիայով:\t\n"
     }
   },
+  "Address": "Հասցէ",
   "Anunexpectederroroccurred": "Անսպասելի սխալ տեղի ունեցավ:",
   "BECOMEAPartner": "Դառնալ Գործընկեր",
+  "Change Menu Item Order": "Բաժինների Հերթ",
   "Changepassword": "Փոխել գաղտնաբառը",
+  "Color 5": "Գույն 5",
   "Confirmemail": "Հաստատեք էլ․ հասցեն",
+  "Copy Menu Link": "Պատճենել Հղումը",
+  "Currency": "Արժույթ",
+  "Download QR Code": "Քաշել QR Կոդը",
+  "Edit Styles": "Փոխել Ոճը",
   "Email": "էլ. հասցե",
-  "EmailVerified": "Էլփոստը հաստատված է",
+  "EmailVerified": "Էլ փոստը հաստատված է",
   "Enternewpassword": "Մուտքագրեք նոր գաղտնաբառ",
-  "Enteryouremail": "Մուտքագրեք ձեր էլ.-հասցեն ․․․",
-  "ErrorSendingEmail": "Սխալ՝ էլ նամալկ ուղարկելիս",
+  "Enteryouremail": "Մուտքագրեք էլ. հասցեն ․․․",
+  "ErrorSendingEmail": "Սխալ՝ էլ նամակը ուղկելիս",
   "ErrorUpdatingPassword": "Գաղտնաբառի թարմացման սխալ",
   "Errorcreatinguser:": "Սխալ՝ օգտատեր ստեղծելիս",
   "Errorsendingpasswordresetemail:": "Գաղտնաբառի վերակայման էլ.փոստ ուղարկելիս սխալ առաջացավ.",
@@ -53,19 +60,31 @@
   },
   "GOTOMENU": "Անցնել Մենյու",
   "Googlesign-infailed:": "Google-ի մուտքը ձախողվեց՝",
+  "Hide": "Չերևալ",
+  "Image": "Նկար",
+  "Languages": "Լեզուներ",
+  "Languages Establishment": "Սպասարկվող Լեզուներ",
   "Mailconfirmed": "Էլ․ հասցեն հաստատված է",
+  "Manage Banners": "Կառավարել Պաստառները",
   "MostPopularItems": "Մեր Լավագույն Գործընկերները",
   "NewPassword": "Նոր գաղտնաբառ",
-  "PARTNERS": "Մեր Գործընկերները",
+  "OFF": "OFF",
+  "ON": "ON",
+  "PARTNERS": "Գործընկերները",
   "PasswordUpdated": "Գաղտնաբառը թարմացվել է",
   "Passwordsdonotmatch": "Գաղտնաբառերը չեն համընկնում:",
+  "Phone": "Հեռ․",
   "Pleasecheckyouremailfortheverificationlink": "Խնդրում ենք ստուգել ձեր էլ.փոստը հաստատման հղման համար:",
   "Pleaseconfirmyourpassword!": "Խնդրում ենք հաստատել ձեր գաղտնաբառը:",
   "Pleaseinputyouremail!": "Խնդրում ենք մուտքագրել ձեր էլ. հասցեն",
   "Pleaseinputyourpassword!": "Խնդրում ենք մուտքագրել ձեր գաղտնաբառը:",
   "Pleasere-enteryourpassword": "Կրկին մուտքագրեք ձեր գաղտնաբառը",
   "Pleasewriteyouremail": "Խնդրում ենք գրեք ձեր էլ․-հասցեն",
+  "QR Link": "QR Հղում",
+  "QR or Link": "QR կամ Հղում",
   "Registrationsuccessful!": "Գրանցումը հաջողվեց: Խնդրում ենք ստուգել ձեր էլ․ հասցեն՝ ձեր հաշիվը հաստատելու համար։",
+  "Save Order": "Հիշել Հերթը",
+  "Save Style": "Հիշել Ոճը",
   "Send": "Ուղղարկել",
   "SendResetLink": "Ուղարկեք Վերակայման հղումը",
   "ServiceInclude": {
@@ -97,15 +116,27 @@
       "include": "«Ստանդարտ» /«Զեղչային»  գին և «Թաքցնել»  տարրերը՝ մենյուի բովանդակության ճկուն քաղաքականության համար"
     }
   },
+  "Show": "Երևալ",
   "Showmore": "Ավելին",
   "SignedinwithGoogle": "Մուտք եք գործել Google-ով",
-  "SignedupsuccessfullywithGoogle!": "Հաջողությամբ գրանցվեց Google-ի միջոցով:",
+  "SignedupsuccessfullywithGoogle!": "Հաջողությամբ գրանցվեցիք Google-ի միջոցով:",
   "Signinfailed:": "Մուտքը ձախողվեց՝",
   "Signinsuccessful": "Մուտքը հաջողվեց",
+  "Styles": "Ոճեր",
+  "Submit": "Հաստատել",
   "Support": "Օգնություն",
-  "Thetwopasswordsdonotmatch!": "Երկու գաղտնաբառերը չեն համընկնում:",
-  "Userdata": "Օգտագործողի տվյալներ",
+  "Text": "Թեքստ",
+  "Text color when active": "Տեկստը Ակտիվ",
+  "Thetwopasswordsdonotmatch!": "Գաղտնաբառերը չեն համընկնում:",
+  "Upload Logo": "Բեռնել Լօգօ",
+  "Upload New Banner": "Բեռնել",
+  "Userdata": "Օգտատիրոջ տվյալներ",
   "VerificationEmailSent": "Էլ․ նամակը հաստատման համար ուղղարկված է",
+  "WiFi Name": "WIFI Անուն",
+  "WiFi Pass": "WIFI Ծածկագիր",
+  "With IMG": "Նկարով",
+  "With Image": "Նկարով",
+  "Without IMG": "Առանց Նկար",
   "Youremailhasbeensuccessfullyverified": "Ձեր էլ.փոստը հաջողությամբ հաստատվել է:",
   "Yourpasswordhasbeensuccessfullyupdated": "Ձեր գաղտնաբառը հաջողությամբ թարմացվել է:",
   "aboutTitle": "Էլեկտրոնային QR մենյու",
