--- a/src/translations/ru/common.json
+++ b/src/translations/ru/common.json
@@ -11,15 +11,22 @@
       "description": "Улучшите свой бизнес: Преобразуйте свой бизнес с помощью умной QR-технологии.\t\n"
     }
   },
+  "Address": "Адресс",
   "Anunexpectederroroccurred": "Произошла непредвиденная ошибка.",
   "BECOMEAPartner": "Стать Партнером",
+  "Change Menu Item Order": "Порядок Секций",
   "Changepassword": "Изменить пароль",
+  "Color 5": "Цвет 5",
   "Confirmemail": "Подтвердить почту",
-  "Email": "Электронная почта",
-  "EmailVerified": "Электронная почта подтверждена",
+  "Copy Menu Link": "Копировать Ссылку",
+  "Currency": "Валюта",
+  "Download QR Code": "Скачать QR Код",
+  "Edit Styles": "Изменить Стили",
+  "Email": "Эл. почта",
+  "EmailVerified": "Эл. почта подтверждена",
   "Enternewpassword": "Введите новый пароль",
-  "Enteryouremail": "Введите адрес электронной почты...",
-  "ErrorSendingEmail": "Ошибка отправки электронного письма",
+  "Enteryouremail": "Введите адрес эл. почты...",
+  "ErrorSendingEmail": "Ошибка отправки эл. письма",
   "ErrorUpdatingPassword": "Ошибка обновления пароля",
   "Errorcreatinguser:": "Ошибка при создании пользователя:",
   "Errorsendingpasswordresetemail:": "Error sending password reset email:",
@@ -53,19 +60,31 @@
   },
   "GOTOMENU": "ПЕРЕЙТИ К МЕНЮ",
   "Googlesign-infailed:": "Не удалось войти в Google.",
+  "Hide": "Невидим",
+  "Image": "Фото",
+  "Languages": "Языки",
+  "Languages Establishment": "Поддержишаемые языки",
   "Mailconfirmed": "Почта подтверждена",
+  "Manage Banners": "Управлять Баннерами",
   "MostPopularItems": "Самые популярные партнеры",
   "NewPassword": "Новый пароль",
+  "OFF": "OFF",
+  "ON": "ON",
   "PARTNERS": "ПАРТНЕРЫ",
   "PasswordUpdated": "Пароль обновлен",
   "Passwordsdonotmatch": "Пароли не совпадают!",
-  "Pleasecheckyouremailfortheverificationlink": "Пожалуйста, проверьте свою электронную почту на наличие ссылки для подтверждения.",
+  "Phone": "Тел.",
+  "Pleasecheckyouremailfortheverificationlink": "Пожалуйста, проверьте свою эл․ почту на наличие ссылки для подтверждения.",
   "Pleaseconfirmyourpassword!": "Пожалуйста, подтвердите свой пароль!",
-  "Pleaseinputyouremail!": "Пожалуйста, введите свой адрес электронной почты!",
+  "Pleaseinputyouremail!": "Пожалуйста, введите свой адрес эл․ почты!",
   "Pleaseinputyourpassword!": "Введите пароль!",
   "Pleasere-enteryourpassword": "Введите пароль повторно",
-  "Pleasewriteyouremail": "Напишите свой адрес электронной почты.",
-  "Registrationsuccessful!": "Регистрация прошла успешно! Проверьте свою электронную почту, чтобы подтвердить свой аккаунт.",
+  "Pleasewriteyouremail": "Напишите свой адрес эл․ почты.",
+  "QR Link": "QR Ссылка",
+  "QR or Link": "QR или Ссылка",
+  "Registrationsuccessful!": "Регистрация прошла успешно! Проверьте свою эл․ почту, чтобы подтвердить свой аккаунт.",
+  "Save Order": "Запомнить Порядок",
+  "Save Style": "Сохранить Стиль",
   "Send": "Отправить",
   "SendResetLink": "Отправить ссылку сброса",
   "ServiceInclude": {
@@ -97,21 +116,33 @@
       "include": "Функции «Стандартная цена»/«Цена со скидкой» и «Скрыть»  пункты меню для гибкой политики содержания меню"
     }
   },
+  "Show": "Видно",
   "Showmore": "Показать больше",
   "SignedinwithGoogle": "Вы вошли через Google",
   "SignedupsuccessfullywithGoogle!": "Регистрация в Google прошла успешно!",
   "Signinfailed:": "Не удалось войти:",
   "Signinsuccessful": "Вход выполнен успешно",
+  "Styles": "Стили",
+  "Submit": "Подтвердить",
   "Support": "Поддержка",
-  "Thetwopasswordsdonotmatch!": "Два пароля не совпадают!",
+  "Text": "Текст",
+  "Text color when active": "Текст Активный",
+  "Thetwopasswordsdonotmatch!": "Пароли не совпадают!",
+  "Upload Logo": "Загрузить Лого",
+  "Upload New Banner": "Загрузить",
   "Userdata": "Данные пользователя",
   "VerificationEmailSent": "Письмо с подтверждением отправлено",
-  "Youremailhasbeensuccessfullyverified": "Ваш адрес электронной почты успешно проверен.",
+  "WiFi Name": "WIFI Имя",
+  "WiFi Pass": "WIFI Пароль",
+  "With IMG": "С Картинами",
+  "With Image": "С Картинами",
+  "Without IMG": "Без Картинок",
+  "Youremailhasbeensuccessfullyverified": "Ваш адрес эл․ почты успешно проверен.",
   "Yourpasswordhasbeensuccessfullyupdated": "Ваш пароль успешно обновлен.",
   "aboutTitle": "Электронное QR меню",
   "comfirmPassword": "Подтвердите Пароль",
   "faq": "Часто задаваемые  вопросы",
-  "forgotPassword": "Забыли пароль ?",
+  "forgotPassword": "Забыли пароль?",
   "institutions": "Заведение",
   "logout": "выйти ",
   "or": "или",
