--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -11,10 +11,17 @@
       "description": "Take Your Business Higher: Upgrade to smart QR menus for a modern touch.\t\n"
     }
   },
+  "Address": "Address",
   "Anunexpectederroroccurred": "An unexpected error occurred.",
   "BECOMEAPartner": "Became a Partner",
+  "Change Menu Item Order": "Section Order",
   "Changepassword": "Change password",
+  "Color 5": "Color 5",
   "Confirmemail": "Confirm email",
+  "Copy Menu Link": "Copy Link",
+  "Currency": "Currency",
+  "Download QR Code": "Download QR Code",
+  "Edit Styles": "Edit Styles",
   "Email": "Email",
   "EmailVerified": "Email Verified",
   "Enternewpassword": "Enter new password",
@@ -53,19 +60,31 @@
   },
   "GOTOMENU": "GO TO MENU",
   "Googlesign-infailed:": "Google sign-in failed:",
+  "Hide": "Hide",
+  "Image": "Image",
+  "Languages": "Languages",
+  "Languages Establishment": "Supported languages",
   "Mailconfirmed": "Mail confirmed",
+  "Manage Banners": "Manage Banners",
   "MostPopularItems": "Most Popular Items",
   "NewPassword": "New Password",
+  "OFF": "OFF",
+  "ON": "ON",
   "PARTNERS": "PARTNERS",
   "PasswordUpdated": "Password Updated",
   "Passwordsdonotmatch": "Passwords do not match!",
+  "Phone": "Phone",
   "Pleasecheckyouremailfortheverificationlink": "Please check your email for the verification link.",
   "Pleaseconfirmyourpassword!": "Please confirm your password!",
   "Pleaseinputyouremail!": "Please input your email!",
   "Pleaseinputyourpassword!": "Please input your password!",
   "Pleasere-enteryourpassword": "Please re-enter your password",
   "Pleasewriteyouremail": "Please write your email.",
+  "QR Link": "QR Link",
+  "QR or Link": "QR or Link",
   "Registrationsuccessful!": "Registration successful! Please check your email to verify your account.",
+  "Save Order": "Save Order",
+  "Save Style": "Save Style",
   "Send": "Send",
   "SendResetLink": "Send Reset Link",
   "ServiceInclude": {
@@ -97,21 +116,33 @@
       "include": "\"Standard\"/\"Discount\" price and \"Hide\" menu items for flexible policy of menu content"
     }
   },
+  "Show": "Show",
   "Showmore": "Show more",
   "SignedinwithGoogle": "Signed in with Google",
   "SignedupsuccessfullywithGoogle!": "Signed up successfully with Google!",
   "Signinfailed:": "Sign in failed:",
   "Signinsuccessful": "Sign in successful",
+  "Styles": "Styles",
+  "Submit": "Submit",
   "Support": "Support",
-  "Thetwopasswordsdonotmatch!": "The two passwords do not match!",
+  "Text": "Text",
+  "Text color when active": "Text Active",
+  "Thetwopasswordsdonotmatch!": "Passwords do not match!",
+  "Upload Logo": "Upload Logo",
+  "Upload New Banner": "Upload",
   "Userdata": "User data",
   "VerificationEmailSent": "Verification Email Sent",
+  "WiFi Name": "WIFI Name",
+  "WiFi Pass": "WIFI Pass",
+  "With IMG": "With IMG",
+  "With Image": "With Image",
+  "Without IMG": "Without IMG",
   "Youremailhasbeensuccessfullyverified": "Your email has been successfully verified.",
   "Yourpasswordhasbeensuccessfullyupdated": "Your password has been successfully updated.",
   "aboutTitle": "Digital QR menu",
   "comfirmPassword": "Comfirm Password",
   "faq": "Frequently asked questions",
-  "forgotPassword": "Forgot Password ?",
+  "forgotPassword": "Forgot Password?",
   "institutions": "Institutions",
   "logout": "log out",
   "or": "or",
